--- a/content/index.html
+++ b/content/index.html
@@ -2,6 +2,9 @@
 title: Home
 ---
 
-<h1>Under construction</h1>
-
-<p>Go to <a href="http://3ofcoins.net">http://3ofcoins.net</a></p>
+    <article>
+        <header>
+          <h1>Under construction</h1>
+        </header>
+      <p>Visit <a href="http://3ofcoins.net">http://3ofcoins.net</a></p>
+    </article>
