Creates layout consistent with 3ofcoins.net

--- a/content/index.html
+++ b/content/index.html
@@ -1,10 +1,18 @@
 ---
-title: Home
+title: 
 ---
 
     <article>
         <header>
-          <h1>Under construction</h1>
+          <h1>Our open source projects</h1>
         </header>
-      <p>Visit <a href="http://3ofcoins.net">http://3ofcoins.net</a></p>
+      <h2><a href="https://github.com/3ofcoins/minigit">Minigit</a></h2>
+      <p>Minigit is a minimal Ruby interface for Git. It is a simple proxy that runs Git commands, and optionally captures output. It does not provide any abstraction provided by Grit or Git gems. It is just a simple wrapper over system('git ...') call. It also allows capturing output of Git commands.<a href="https://github.com/3ofcoins/minigit">>></a></p>
+      <h2><a href="http://github.com/3ofcoins/nanodoc">Nanodoc</a></h2>
+      <p>Generate a literate programming source code documentation using Nanoc and Pygments.<a href="http://github.com/3ofcoins/nanodoc">>></a></p>
+      <h2><a href="http://github.com/3ofcoins/tinyconfig">Tinyconfig</a></h2>
+      <p>TinyConfig provides a base class to create a Ruby configuration file loader. The resulting configuration file is usable for people not familiar with Ruby, but it is possible for a power user to use full power of Ruby to script the configuration.<a href="http://github.com/3ofcoins/tinyconfig">>></a></p>
+      <h2><a href="http://github.com/3ofcoins/vendorificator">Vendorificator</a></h2>
+      <p>Vendor everything. Keep your own copies of upstream dependencies that your project needs somewhere close to your project, best in the same source control repository.<a href="http://github.com/3ofcoins/vendorificator">>></a></p>
+      <p><b>View more <a href="http://github.com/3ofcoins/">on github</a> or visit <a href="http://3ofcoins.net">http://3ofcoins.net</a></b></p>
     </article>
